[gd_scene load_steps=8 format=3 uid="uid://c02cy46k5dbx5"]

[ext_resource type="PackedScene" uid="uid://ju7maq1qeu40" path="res://common/molecules/background.tscn" id="1_fy36l"]
[ext_resource type="Script" path="res://game-specific/game_8/game_8.gd" id="4_1if3m"]
[ext_resource type="PackedScene" uid="uid://chynyknwob2sv" path="res://common/atoms/sprite_circle/sprite_circle.tscn" id="5_8eqdi"]
[ext_resource type="Script" path="res://game-specific/game_8/tile.gd" id="5_c58tj"]
[ext_resource type="Theme" uid="uid://c02k6aerkrk2u" path="res://common/atoms/theme.tres" id="11_f4nsl"]
[ext_resource type="PackedScene" uid="uid://bm8s5tu35rfnt" path="res://common/atoms/highlight/highlight.tscn" id="12_v23mk"]
[ext_resource type="PackedScene" uid="uid://cdo5hamcxy2ol" path="res://common/molecules/win_screen/win_screen.tscn" id="13_706wi"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="Background" parent="." instance=ExtResource("1_fy36l")]
z_index = -2
layout_mode = 1
metadata/_edit_lock_ = true

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 445.0
offset_top = 8.0
offset_right = -445.0
offset_bottom = 42.0
grow_horizontal = 2
pivot_offset = Vector2(131, 17)
theme = ExtResource("11_f4nsl")
text = "Level 0"
horizontal_alignment = 1
uppercase = true

[node name="Highlight" parent="Score" instance=ExtResource("12_v23mk")]

[node name="Game8" type="Node" parent="."]
script = ExtResource("4_1if3m")

[node name="ColorRect" type="ColorRect" parent="Game8" node_paths=PackedStringArray("n_player")]
clip_children = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -40.0
offset_right = -14.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_c58tj")
in_node = true
n_player = NodePath("SpriteCircle")

[node name="SpriteCircle" parent="Game8/ColorRect" instance=ExtResource("5_8eqdi")]
visible = false
modulate = Color(0.976471, 0.862745, 0.564706, 1)
position = Vector2(40, 40)
radius = 12

[node name="ColorRect2" type="ColorRect" parent="Game8" node_paths=PackedStringArray("n_player")]
clip_children = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 31.0
offset_top = -41.0
offset_right = 111.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_c58tj")
n_player = NodePath("SpriteCircle")

[node name="SpriteCircle" parent="Game8/ColorRect2" instance=ExtResource("5_8eqdi")]
visible = false
modulate = Color(0.976471, 0.862745, 0.564706, 1)
position = Vector2(40, 40)
radius = 12

[node name="ColorRect3" type="ColorRect" parent="Game8" node_paths=PackedStringArray("n_player")]
clip_children = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 68.0
offset_right = 110.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_c58tj")
n_player = NodePath("SpriteCircle")

[node name="SpriteCircle" parent="Game8/ColorRect3" instance=ExtResource("5_8eqdi")]
visible = false
modulate = Color(0.976471, 0.862745, 0.564706, 1)
position = Vector2(40, 40)
radius = 12

[node name="ColorRect4" type="ColorRect" parent="Game8" node_paths=PackedStringArray("n_player")]
clip_children = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 66.0
offset_right = -15.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_c58tj")
n_player = NodePath("SpriteCircle")

[node name="SpriteCircle" parent="Game8/ColorRect4" instance=ExtResource("5_8eqdi")]
visible = false
modulate = Color(0.976471, 0.862745, 0.564706, 1)
position = Vector2(40, 40)
radius = 12

[node name="WinScreen" parent="." instance=ExtResource("13_706wi")]
layout_mode = 1
mouse_filter = 2
disable_restart = true
metadata/_edit_lock_ = true

[node name="Label3" parent="WinScreen/TextureRect/VBoxContainer" index="4"]
text = ""

[editable path="WinScreen"]
